# jarvis

./: .gitignore  README.md  com.user.jarvis.plist  config.example.yaml  pyproject.toml  run.sh  test.sh
jarvis/: __init__.py  __main__.py  audio.py  config.py  confirmation.py  errors.py  hotkeys.py  intent.py  llm.py  main.py  router.py  stt.py  tts.py  wakeword.py
jarvis/plugins/: __init__.py  assistant.py  base.py  files.py  music.py  screenshot.py  system.py  weather.py
scripts/: install.sh  test_wakeword.py  tts_worker.py  uninstall.sh
tests/: test_assistant_plugin.py  test_audio.py  test_config.py  test_confirmation.py  test_hotkeys.py  test_intent.py  test_llm.py  test_main.py  test_music_plugin.py  test_router.py  test_screenshot_plugin.py  test_stt.py  test_system_plugin.py  test_weather_plugin.py
